--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/kevincjhung/deadMarshmallow#readme",
   "dependencies": {
     "body-parser": "^1.19.2",
+    "cookie-parser": "^1.4.6",
     "express": "^4.17.3"
   },
   "devDependencies": {
