--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "IDSP Semester 2 - Marketplace app - LocalScoop",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "npx nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,9 @@
   "homepage": "https://github.com/kevincjhung/deadMarshmallow#readme",
   "dependencies": {
     "body-parser": "^1.19.2",
+    "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.0.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.3"
   },
   "devDependencies": {
